--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,10 @@
     <string name="boston">Boston</string>
     <string name="paris">Paris</string>
     <string name="nyc">New York City</string>
+    <string name="search">Search for multiple tags by separating with a comma(,)</string>
     <string name="error_no_internet_force_update">Unfortunately, we cannot get new pictures without a network connection. Loading data from cache instead.</string>
     <string name="error_no_pictures_found">No pictures found!</string>
     <string name="error_no_connection">No internet connection. We need it for just a moment to cache all the things!</string>
+    <string name="by">by %s</string>
+
 </resources>
